--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 name: Lakshmi Venkatasubramanian, Aspiring Data Scientist
 markdown: kramdown
-permalink: /project/:year/:month/:day/:title
+permalink: /projects/:title
