--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Lakshmi Venkatasubramanian, Aspiring Data Scientist
 markdown: kramdown
 permalink: /project/:title
-title-img: /IMG_2235.jpg
+thumbnail-img: /IMG_2235.jpg
