--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 name: Lakshmi Venkatasubramanian, Aspiring Data Scientist
 markdown: kramdown
 permalink: /project/:title
+
+theme: jekyll-theme-time-machine
